Done login và registerUser

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -75,12 +75,14 @@
                 android:text="Email Address"
                 android:alpha="0.7"
                 android:textStyle="bold"/>
+
             <EditText
+                android:id="@+id/txtEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="16dp"
+                android:drawableEnd="@drawable/check_icon"
                 android:inputType="textEmailAddress"
-                android:drawableEnd="@drawable/check_icon"/>
+                android:padding="16dp" />
 
             <View
                 android:layout_width="wrap_content"
@@ -92,12 +94,14 @@
                 android:text="Password"
                 android:alpha="0.7"
                 android:textStyle="bold"/>
+
             <EditText
+                android:id="@+id/txtPass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:drawableEnd="@drawable/password_icon"
                 android:inputType="textPassword"
-                android:padding="16dp"
-                android:drawableEnd="@drawable/password_icon"/>
+                android:padding="16dp" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
